make update on mobile

--- a/styles.css
+++ b/styles.css
@@ -60,14 +60,18 @@ nav{
     height: auto;
     text-align: center;
     margin-bottom: 2.5rem;
+    
 
     h1{
-        font-size: 2.6rem;
+        font-size: 1.5rem;
+        margin-top: 1rem;
     }
     p{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         color: var(--Grayish-Violet);
         margin: 1rem 0;
+        padding: 0 2rem;
+        
     }
 
     button{
@@ -173,7 +177,7 @@ form button{
     }
     p{
         color: var(--Grayish-Violet);
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -240,6 +244,7 @@ left: 48%;
         color: white;
         font-size: 2rem;
         font-weight: 900;
+        text-align: center;
     }
     button{
         padding: 1rem 3rem;
@@ -495,6 +500,13 @@ input[type="submit"]:hover{
             margin-left: 10%;
             text-align: left;
             width: 30%;
+
+            h1{
+                font-size: 2.6rem;
+            }
+            p{
+                padding: 0;
+            }
            
         }
     }
