--- a/styles.css
+++ b/styles.css
@@ -507,6 +507,7 @@ input[type="submit"]:hover{
 
             h1{
                 font-size: 2.6rem;
+                padding: 0;
             }
             p{
                 padding: 0;
